<?xml version="1.0" encoding="utf-8"?>

<!--
    @author: Oliver Lester
    @description: This program creates an app that showcases the theme of an Arizonan town.
    Will act as a travel guide of sorts. This holds all the views of the app
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biege"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:text="@string/location"
            android:textColor="@color/tangerine"
            android:layout_gravity="center"
            android:textSize="20pt"
            android:padding="25dp"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:contentDescription="@string/pic1_description"
            android:src="@drawable/pic1"
            android:layout_gravity="center"
            android:padding="12.5dp"
            android:background="@color/sky"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town_description"
            android:textColor="@color/tangerine"
            android:textSize="10pt"
            android:padding="25dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:contentDescription="@string/pic1_description"
            android:src="@drawable/lp"
            android:layout_gravity="center"
            android:padding="12.5dp"
            android:background="@color/sky"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lp_description"
            android:textColor="@color/tangerine"
            android:textSize="5pt"
            android:padding="12.5dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:contentDescription="@string/pic1_description"
            android:src="@drawable/tex"
            android:layout_gravity="center"
            android:padding="12.5dp"
            android:background="@color/sky"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tex_description"
            android:textColor="@color/tangerine"
            android:textSize="5pt"
            android:padding="12.5dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

    </LinearLayout>
</ScrollView>
